# Terminal_Chess-FeildProgect

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Feild_Progect  Feild_Proget.cpp  Makefile  README.md  a.out  alfiere.h  casella.cpp  casella.h  cavallo.h  cmake_install.cmake  computer.cpp  computer.h  eccezione.h  eccezioni.h  giocatore.h  lista_mosse.txt  log.txt  log1.txt  log_cc.txt  log_ma_mosse_insuff_materiale.txt  log_non_scacco_turno35.txt  log_pc.txt  log_stallo_falso.txt  main  main.cpp  pedone.h  pezzo.h  player.h  re.h  regina.h  replay  replay.cpp  scacchiera.cpp  scacchiera.h  test  torre.h  umano.cpp
Replay/: CMakeLists.txt  main.cpp
Scacchiera/: CMakeLists.txt
Scacchiera/include/: cavallo.h  computer.h  scacchiera.h
Scacchiera/src/: casella.cpp  eccezione.cpp  pedone.cpp  re.cpp  umano.cpp
include/: alfiere.h  casella.h  cavallo.h  computer.h  giocatore.h  pedone.h  pezzo.h  re.h  regina.h  scacchiera.h  torre.h  umano.h
pezzi/: alfiere.cpp  alfiere.h  cavallo.cpp  cavallo.h  pedone.cpp  pedone.h  pezzo.h  position.h  re.cpp  re.h  regina.cpp  regina.h  torre.cpp  torre.h
pezzi/include/: pezzo.h  torre.h
pezzi/src/: alfiere.cpp  cavallo.cpp  pedone.cpp  re.cpp  regina.cpp  torre.cpp
replay/: CMakeLists.txt  main.cpp
scacchiera/: CMakeLists.txt  main.cpp
scacchiera/include/: alfiere.h  casella.h  cavallo.h  computer.h  eccezione.h  giocatore.h  pedone.h  pezzo.h  re.h  regina.h  scacchiera.h  torre.h  umano.h
scacchiera/src/: alfiere.cpp  casella.cpp  cavallo.cpp  computer.cpp  log.txt  main.cpp  pedone.cpp  pezzo.cpp  re.cpp  regina.cpp  scacchiera  scacchiera.cpp  torre.cpp  umano.cpp
src/: alfiere.cpp  casella.cpp  cavallo.cpp  computer.cpp  log.txt  main.cpp  pedone.cpp  pezzo.cpp  re.cpp  regina.cpp  scacchiera.cpp  torre.cpp  umano.cpp
